Try to fix welcome screen z-index problem

--- a/src/components/WelcomeScreen.module.css
+++ b/src/components/WelcomeScreen.module.css
@@ -1,10 +1,10 @@
 .WelcomeScreen {
-  background-color: rgba(0, 0, 0, 0.1);
+  height: 100%;
+  background-color: rgba(0, 87, 68, 0.8);
   z-index: var(--z-welcome-screen);
   display: grid;
   place-items: center;
-  transform-style: preserve-3d;
-  transform: translateZ(0);
+  /* transform-style: preserve-3d; */
 }
 .WelcomeScreenCurtain {
   content: "";
@@ -19,8 +19,8 @@
   transform: translateY(-50%) rotateX(360deg) translateZ(-44px) rotateX(0deg);
 }
 
-.WelcomeScreenOut .WelcomeScreenCurtain {
-  animation: screen-out 2s forwards ease-in-out;
+.WelcomeScreenOut {
+  animation: screen-out 1s 1s forwards ease-in-out;
 }
 
 .WelcomeScreenOut button {
@@ -55,7 +55,8 @@
     filter: blur(0px);
   }
   to {
-    filter: blur(20px);
+    opacity: 0;
+    filter: blur(40px);
   }
 }
 
